--- a/src/main/webapp/resources/css/member/join.css
+++ b/src/main/webapp/resources/css/member/join.css
@@ -261,3 +261,34 @@
 	clear: both;
 }
 
+/* 유효성 검사 문구 */
+ 
+.final_id_ck{
+    display: none;
+}
+.final_pw_ck{
+    display: none;
+}
+.final_pwck_ck{
+    display: none;
+}
+.final_user_ck{
+    display: none;
+}
+.final_mail_ck{
+    display: none;
+}
+.final_addr_ck{
+    display: none;
+}
+
+
+/* 비밀번호 확인 일치 유효성검사 */
+.pwck_input_success{
+        color : green;
+        display : none;    
+}
+.pwck_input_error{
+        color : red;
+        display : none;    
+}  
