--- a/src/main/webapp/resources/css/cart.css
+++ b/src/main/webapp/resources/css/cart.css
@@ -488,4 +488,15 @@ a{
    	font-size: 20px;
    	font-weight: bold;		
 }
+
+/* 이미지 */
+.image_wrap{
+	width: 100%;
+	height: 100%;
+}
+.image_wrap img{
+    max-width: 85%;
+    height: auto;
+    display: block;		
+}
 	
