--- a/src/main/webapp/resources/css/order.css
+++ b/src/main/webapp/resources/css/order.css
@@ -405,3 +405,156 @@ table{
     color: #555;
     cursor: pointer;
 }
+
+/* 주문상품 정보 */
+.orderGoods_div{
+	margin-top:30px;
+}
+.goods_kind_div{
+	font-size: 25px;
+    line-height: 35px;
+    font-weight: bold;
+}
+.goods_subject_table{
+	font-size: 14px;
+    line-height: 20px;
+    width: 100%;
+    text-align: center; 
+}
+.goods_subject_table th{
+	text-align: center;
+    color: #333;
+    border-bottom: 1px solid #e7e7e7;
+    border-top: 2px solid #3084d9;
+    background: #f4f9fd;
+    padding: 2px 0;	 
+}
+.goods_table{
+	font-size: 14px;
+	line-height: 20px;
+	border-bottom: 1px solid #e7e7e7;
+}
+
+.goods_table tr{
+height: 110px;
+}
+.goods_table_price_td{
+	text-align: center;
+}
+
+/* 포인트 영역 */
+.point_div{
+	margin-top: 30px;
+    margin-bottom: 50px;
+}
+.point_div_subject{
+	font-size: 25px;
+    line-height: 35px;
+    font-weight: bold;
+}
+.point_table{
+	border-color: #ddd;
+    border-spacing: 0;
+    border-top: 1px solid #363636;
+    border-bottom: 1px solid #b6b6b6;
+}
+.point_table th{
+	border-color: #ddd;
+    vertical-align: top;
+    text-align: center;
+    color: #333333;
+    background: #fbfbfb;
+    text-indent: 0;
+    padding: 12px 5px 12px 20px;
+    font-size: 15px;
+    line-height: 20px;
+}
+.point_table_td{
+	border-color: #ddd;
+    text-align: left;
+    color: #333333;
+    padding: 8px 15px;
+}
+.order_point_input_btn{
+	vertical-align: middle;
+    display: inline-block;
+    border: 1px solid #aaa;
+    width: 60px;
+    text-align: center;
+    height: 20px;
+    line-height: 20px;
+    color: #555;
+    cursor: pointer;
+    font-size: 12px;
+}
+
+/* 주문 종합 정보 */
+.total_info_div{
+	position:absolute;
+	top: 200%;
+	left: 10%;
+	right : 70%;
+	width : 600px;
+	border : 1px solid #333;
+	border-top-width:2px;	
+	
+}
+.total_info_price_div{
+	width: 90%;
+    margin: auto;
+	position: relative;
+}
+.total_info_div ul{
+	list-style: none;
+}
+.total_info_div li{
+	text-align: right;
+	margin-top:10px;
+}
+.price_span_label{
+	float: left;
+}
+.price_total_li{
+	border-top: 1px solid #ddd;
+	padding-top: 20px;
+}
+.strong_red{
+	color: red;
+}
+.total_price_red{
+	font-size: 25px;
+}
+.total_price_label{
+	margin-top: 5px;
+}
+.point_li{
+    padding: 15px;
+    border-top: 1px solid #ddd;
+    margin: 10px -15px 0;
+}
+.total_info_btn_div{
+	border-top: 1px solid #ddd;
+    text-align: center;
+    padding: 15px 20px;
+}
+.order_btn{
+    display: inline-block;
+    font-size: 21px;
+    line-height: 50px;
+    width: 200px;
+    height: 50px;
+    background-color: #365fdd;
+    color: #fff;
+    font-weight: bold;
+}
+
+/* 이미지 */
+.image_wrap{
+	width: 100%;
+	height: 100%;
+}
+.image_wrap img{
+    max-width: 85%;
+    height: auto;
+    display: block;		
+}
