주문취소 구현완료, 주문현황 서비스 Order로 변경

--- a/src/main/webapp/resources/css/admin/orderList.css
+++ b/src/main/webapp/resources/css/admin/orderList.css
@@ -257,3 +257,14 @@ ul{
 .clearfix{
 	clear: both;
 }
+
+.delete_btn{
+    border: none;
+    color: white;
+    padding: 5px 15px;
+    cursor: pointer;
+    background-color: #f7564b;	
+}
+.delete_btn:hover{
+	background-color : #da190b;
+}
